--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,12 @@
 @import "tailwindcss";
 @import "bootstrap/dist/css/bootstrap.min.css";
 
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+@theme {
+  --font-display: "Satoshi", "sans-serif";
+  --breakpoint-3xl: 120rem;
+  --color-pink: #ea2678;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  /* ... */
 }
